src/blocks/profile.css
.profile {
  display: flex;
  justify-content: space-between;
  width: 1280px;
  max-width: 100%;
}

.profile .page__section {
  justify-content: space-between;
}

.profile__section {
  display:flex;
  position: relative;
  padding-top: 20px;
  gap: 12px;
  width: 505px;
  height: 190px;
}

.profile__avatar-container {
  display: flex;
  gap: 20px;
  position: relative;
 }

.profile__edit-avatar-btn {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  font-family: poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 16px;
  width: 100%;
  height: 100%;
  text-align: center;
  color: #FFF;
  padding: 0;
  gap: 8px;
  visibility: visible;
  border: none;
  background-color: transparent;
  position: absolute;
}

.profile__edit-avatar-btn .profile__avatar:hover {
  visibility: visible;
}

.profile__edit-avatar-btn::after {
  content: "Edit Avatar";
}

.profile__avatar {
  border-radius: 8px;
  height: 190px;
  width: 190px;
  object-fit: cover;
}

.profile__column {
  display: flex;
  flex-direction: column;
  gap: 12px;
  }

.profile__name {
  font-family: poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 32px;
  line-height: 32px;
  color: #212121;
  margin: 0;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

.profile__description {
  font-family: poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 16px;
  color: #212121;
  opacity: 70%;
  white-space: normal;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  width: 420px;
  margin: 0;
}

.profile__edit-btn {
  display: flex;
  font-family: poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 16px;
  color: #212121;
  margin-top: auto;
  padding: 0;
  gap: 8px;
  opacity: 70%;
  border: none;
  background-color: transparent;
  position: relative;
}

.profile__edit-btn:hover {
  opacity: 1;
  cursor: pointer;
  transition-duration: 1s;
}

.profile__add-btn {
  flex-wrap: wrap;
  align-self:flex-end;
  flex-shrink: 0;
  font-family: poppins, Arial, Helvetica, sans-serif;
  font-weight: 500;
  font-size: 16px;
  line-height: 1.2;
  color: #fcf5e5;
  cursor: pointer;
  width: 157px;
  height: 52px;
  background-color: #212121;
  border: none;
  box-sizing: border-box;
  border-radius: 8px;
  text-align: center;
  gap: 8px;
  padding: 18px 32px;
}



.profile__add-btn:hover {
  opacity: 0.8;
  cursor: pointer;
  transition-duration: 1s;
}

.profile__add-btn-plus {
  margin: 0;
  align-self: center;
  cursor: pointer;
}

.profile__add-btn-writing {
  margin: 0;
  align-self: center;
  cursor: pointer;
}


@media screen and (max-width: 720px) {
  .profile__avatar {
    height: 80px;
    width: 80px;
    margin-top: 12px;
  }

  .profile {
    flex-direction: column;
    width: 288px;
    align-items: center;
    text-align: center;
    padding: 0 0 20px 0;
    gap: 32px;
  }

  .profile__name {
    font-size: 20px;
    text-align: center;
    line-height: 20px;
    font-size: 20px;
    gap: 6px;
    max-width: 288px;
  }

  .profile__column {
    text-align:center;
    align-items: center;
    gap: 12px;
    width: 288px;
  }

  .profile__description {
    text-align: center;
    align-items: center;
    line-height: 16px;
    font-size: 16px;
    gap: 6px;
    width: 288px;
  }

  .profile__edit-btn {
    flex-wrap: wrap;
    align-self: center;
    justify-content:center;
  }

  .profile__add-btn {
    width: 288px;
    flex-wrap: wrap;
    align-self: center;
    justify-content:center;
    gap: 8px;
  }

  .profile__section {
    flex-direction: column;
    align-items: center;
    width: 288px;
  }
}

